--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="weight">Peso</string>
     <string name="calculate">CALCULAR</string>
     <string name="kg">KG</string>
+    <string name="setNumberOfHeight">120</string>
+    <string name="setCM">CM</string>
 </resources>
